// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MPageNotFound should render correctly 1`] = `
<div>
  <div class="m-message m--is-state-warning m--is-skin-default">
    <div class="m-message__wrap">
      <div class="m-message__icon"><svg aria-hidden="true" width="1em" height="1em" class="m-icon">
          <use aria-hidden="true"></use>
        </svg></div>
      <div class="m-message__body">
        <div class="m-message__text">
          <p>m-page-not-found:message</p>
        </div>
      </div>
    </div>
  </div>
  <p>m-page-not-found:directions</p> <a href="/" tabindex="0" class="m-link m--has-content"> <span class="m-link__text">
        m-page-not-found:back-to-portal
    </span> </a>
</div>
`;

exports[`MPageNotFound should render correctly with back-to-label override 1`] = `
<div>
  <div class="m-message m--is-state-warning m--is-skin-default">
    <div class="m-message__wrap">
      <div class="m-message__icon"><svg aria-hidden="true" width="1em" height="1em" class="m-icon">
          <use aria-hidden="true"></use>
        </svg></div>
      <div class="m-message__body">
        <div class="m-message__text">
          <p>m-page-not-found:message</p>
        </div>
      </div>
    </div>
  </div>
  <p>m-page-not-found:directions</p> <a href="/" tabindex="0" class="m-link m--has-content"> <span class="m-link__text">
        Some back to label
    </span> </a>
</div>
`;
